--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,26 @@
   --card-width: 6rem;
   --card-height: 8.4rem;
   --card-aspect: 5 / 7;
+  --sidebar-width: 30rem;
+  --game-padding-x: 2rem;
+}
+
+@media (max-width: 1024px) {
+  :root {
+    --game-padding-x: 1rem;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 1024px) {
+  :root {
+    --sidebar-width: 18rem;
+  }
+}
+
+@media (orientation: portrait) and (max-width: 768px) {
+  :root {
+    --sidebar-width: 0rem;
+  }
 }
 
 html {
@@ -10,6 +30,36 @@ html {
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow-x: hidden;
+}
+
+@media (min-width: 1280px) {
+  html {
+    font-size: 75%;
+  }
+}
+
+@media (min-width: 1440px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+@media (min-width: 1700px) {
+  html {
+    font-size: 100%;
+  }
+}
+
+@media (min-width: 1920px) {
+  html {
+    font-size: 112.5%;
+  }
+}
+
+@media (min-width: 2400px) {
+  html {
+    font-size: 125%;
+  }
 }
 
 body {
